@@ -1,3 +1,6 @@
+[B]2.0.3[/B] - 08-12-2018
+- Fixed unicode strings on main menu
+
 [B]2.0.2[/B] - 12-07-2018
 - Fix for audio indexer (podcasts) on Estuary
 - New title for podcasts
